--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx ts-node src/index.ts",
     "start:dev": "npx nodemon"
   },
   "keywords": [],
@@ -17,6 +18,8 @@
     "typescript": "^5.0.3"
   },
   "dependencies": {
-    "axios": "^1.3.5"
+    "axios": "^1.3.5",
+    "base64url": "^3.0.1",
+    "uuid": "^9.0.0"
   }
 }
