--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^1.3.5",
     "base64url": "^3.0.1",
+    "league-connect": "^6.0.0-rc12",
     "uuid": "^9.0.0"
   }
 }
