--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^18.15.11",
+    "@types/uuid": "^9.0.1",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
@@ -21,6 +22,7 @@
     "axios": "^1.3.5",
     "base64url": "^3.0.1",
     "dotenv": "^16.0.3",
+    "rtmp-client": "^1.5.3",
     "uuid": "^9.0.0"
   }
 }
