--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "typescript": "^5.0.3"
   },
   "dependencies": {
+    "@js-temporal/polyfill": "^0.4.3",
+    "amf2json": "^1.0.7",
     "axios": "^1.3.5",
     "base64url": "^3.0.1",
     "dotenv": "^16.0.3",
+    "ieee754": "^1.2.1",
     "rtmp-client": "^1.5.3",
     "uuid": "^9.0.0"
   }
