--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/node": "^18.15.11",
     "@types/uuid": "^9.0.1",
+    "@types/xml2js": "^0.4.14",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
@@ -24,6 +25,7 @@
     "base64url": "^3.0.1",
     "dotenv": "^16.0.3",
     "uuid": "^9.0.0",
+    "xml2js": "^0.6.2",
     "zlib": "^1.0.5"
   }
 }
