--- a/package.json
+++ b/package.json
@@ -1,26 +1,39 @@
 {
   "name": "lol-headless-client",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.m js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx ts-node src/index.ts",
-    "start:dev": "npx nodemon"
+    "build": "tsup",
+    "lint": "eslint **/*.ts --fix"
   },
-  "keywords": [],
+  "keywords": [
+    "lol",
+    "headless",
+    "client"
+  ],
   "author": "",
-  "license": "ISC",
-  "description": "",
+  "license": "MIT",
+  "description": "League of Legends Headless Client",
   "devDependencies": {
+    "@eslint/js": "^9.2.0",
     "@types/node": "^18.15.11",
     "@types/uuid": "^9.0.1",
     "@types/xml2js": "^0.4.14",
-    "nodemon": "^2.0.22",
+    "eslint": "^8.57.0",
+    "globals": "^15.2.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.3"
+    "tsup": "^8.0.2",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.9.0"
   },
   "dependencies": {
     "@js-temporal/polyfill": "^0.4.3",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
     "axios": "^1.3.5",
     "base64url": "^3.0.1",
     "dotenv": "^16.0.3",
