--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lol-headless-client",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "./dist/index.js",
   "module": "./dist/index.m js",
   "types": "./dist/index.d.ts",
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx ts-node src/index.ts",
     "build": "tsup",
-    "lint": "eslint **/*.ts --fix"
+    "lint": "eslint **/*.ts --fix",
+    "prepublishOnly": "npm run build"
   },
   "keywords": [
     "lol",
