--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx ts-node src/index.ts",
+    "example": "npx ts-node src/example.ts",
     "build": "tsup",
     "lint": "eslint **/*.ts --fix",
     "prepublishOnly": "npm run build"
