feat: add presense info

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-LOL_HEADLESS_CLIENT_RTMP_LOGS=false
+LOL_HEADLESS_CLIENT_ENABLE_LOGS=true # Enable genral logs
+LOL_HEADLESS_CLIENT_RTMP_LOGS=true # Enable RTMP logs
+LOL_HEADLESS_CLIENT_XMPP_LOGS=true # Enable XMPP logs
