--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
+    "strictPropertyInitialization":false,
     "noFallthroughCasesInSwitch": false
   },
   "include": ["src/**/*"],
