--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "@typescript-eslint/parser": "^7.9.0",
     "axios": "^1.3.5",
     "base64url": "^3.0.1",
+    "browserify-zlib": "^0.2.0",
     "dotenv": "^16.0.3",
+    "i": "^0.3.7",
+    "npm": "^10.8.0",
     "uuid": "^9.0.0",
     "xml2js": "^0.6.2",
     "zlib": "^1.0.5"
