--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lol-headless-client",
-  "version": "1.0.15",
+  "version": "1.0.16",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -39,12 +39,10 @@
     "@typescript-eslint/parser": "^7.9.0",
     "axios": "^1.3.5",
     "base64url": "^3.0.1",
-    "browserify-zlib": "^0.2.0",
     "dotenv": "^16.0.3",
     "i": "^0.3.7",
     "npm": "^10.8.0",
     "uuid": "^9.0.0",
-    "xml2js": "^0.6.2",
-    "zlib": "^1.0.5"
+    "xml2js": "^0.6.2"
   }
 }
