--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@eslint/js": "^9.2.0",
     "@types/node": "^18.15.11",
+    "@types/pako": "^2.0.3",
     "@types/uuid": "^9.0.1",
     "@types/xml2js": "^0.4.14",
     "eslint": "^8.57.0",
@@ -42,6 +43,7 @@
     "dotenv": "^16.0.3",
     "i": "^0.3.7",
     "npm": "^10.8.0",
+    "pako": "^2.1.0",
     "uuid": "^9.0.0",
     "xml2js": "^0.6.2"
   }
