--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "@js-temporal/polyfill": "^0.4.3",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
-    "axios": "^1.3.5",
+    "axios": "^1.7.2",
+    "axios-https-proxy-fix": "^0.17.1",
     "base64url": "^3.0.1",
     "dotenv": "^16.0.3",
     "i": "^0.3.7",
